crates/toml_edit/tests/snapshots/invalid/ext/table/quoted-unclosed-2.stderr
TOML parse error at line 1, column 7
  |
1 | [''']
  |       ^
unclosed table, expected `]`
